--- a/.github/actions/install-dependencies/action.yml
+++ b/.github/actions/install-dependencies/action.yml
@@ -1,25 +1,56 @@
 name: 'Install dependencies'
 description: 'Build if needed and install the library dependencies'
 inputs:
+  python-version:
+    description: 'The version of Python to install'
+    required: true
   username:
     description: 'The pypi username'
+    required: true
   compiler-version-password:
     description: 'The password for the compiler-version library'
+    required: true
+  zlib-password:
+    description: 'The password for the zlib library'
+    required: true
   nbt-password:
     description: 'The password for the nbt library'
+    required: true
   core-password:
     description: 'The password for the core library'
+    required: true
   rest-token:
     description: 'The Github authentication token to use to access the REST API.'
+    required: true
 runs:
   using: "composite"
   steps:
+    - name: Set up Python ${{ inputs.python-version }}
+      uses: actions/setup-python@v5
+      with:
+        python-version: ${{ inputs.python-version }}
+
     - name: Install dependencies
       shell: bash
       run: |
         pip cache purge
         python -m pip install --upgrade pip
         pip install build twine packaging
+
+    - name: Get Dependencies
+      id: dep
+      shell: bash
+      run: |
+        mkdir -p build
+        pip install --dry-run --report build/install.json .
+        io=$(python -c "import json; f = open('build/install.json', encoding='utf-8'); print(next(l['metadata']['version'] for l in json.load(f)['install'] if l['metadata']['name'] == 'amulet-io'))")
+        echo "io=$io" >> "$GITHUB_OUTPUT"
+        zlib=$(python -c "import json; f = open('build/install.json', encoding='utf-8'); print(next(l['metadata']['version'] for l in json.load(f)['install'] if l['metadata']['name'] == 'amulet-zlib'))")
+        echo "zlib=$zlib" >> "$GITHUB_OUTPUT"
+        nbt=$(python -c "import json; f = open('build/install.json', encoding='utf-8'); print(next(l['metadata']['version'] for l in json.load(f)['install'] if l['metadata']['name'] == 'amulet-nbt'))")
+        echo "nbt=$nbt" >> "$GITHUB_OUTPUT"
+        core=$(python -c "import json; f = open('build/install.json', encoding='utf-8'); print(next(l['metadata']['version'] for l in json.load(f)['install'] if l['metadata']['name'] == 'amulet-core'))")
+        echo "core=$core" >> "$GITHUB_OUTPUT"
 
     - name: Clone Amulet-Compiler-Version
       uses: actions/checkout@v4
@@ -35,48 +66,42 @@ runs:
         twine-username: ${{ inputs.username }}
         twine-password: ${{ inputs.compiler-version-password }}
 
-    - name: Get Dependencies
-      id: dep
-      shell: bash
-      run: |
-        core=$(python -c "import requirements; print(requirements.AMULET_CORE_REQUIREMENT)")
-        echo "core=$core" >> "$GITHUB_OUTPUT"
-        nbt=$(python -c "import requirements; print(requirements.AMULET_NBT_REQUIREMENT)")
-        echo "nbt=$nbt" >> "$GITHUB_OUTPUT"
-
-    - name: Clone Amulet-Core
-      id: core-clone
-      uses: Amulet-Team/checkout-pep440@v1
-      with:
-        repository: 'Amulet-Team/Amulet-Core'
-        specifier: ${{ steps.dep.outputs.core }}
-        path: 'build/pylib/Amulet-Core'
-        rest-token: ${{ inputs.rest-token }}
-
-    - name: Merge Dependencies
+    - name: Specialise Specifiers
       id: dep2
       shell: bash
       run: |
-        nbt=$(python -c "import sys, os; sys.path.insert(0, os.path.join(r'${{ github.workspace }}', 'build', 'pylib', 'Amulet-Core')); import requirements; print('${{ steps.dep.outputs.nbt }},' + requirements.AMULET_NBT_REQUIREMENT)")
+        io=$(python -c "import requirements; print(requirements.get_specifier_set(\"${{ steps.dep.outputs.io }}\"))")
+        echo "io=$io" >> "$GITHUB_OUTPUT"
+        zlib=$(python -c "import requirements; print(requirements.get_specifier_set(\"${{ steps.dep.outputs.zlib }}\"))")
+        echo "zlib=$zlib" >> "$GITHUB_OUTPUT"
+        nbt=$(python -c "import requirements; print(requirements.get_specifier_set(\"${{ steps.dep.outputs.nbt }}\"))")
         echo "nbt=$nbt" >> "$GITHUB_OUTPUT"
+        core=$(python -c "import requirements; print(requirements.get_specifier_set(\"${{ steps.dep.outputs.core }}\"))")
+        echo "core=$core" >> "$GITHUB_OUTPUT"
+
+    - name: Clone Amulet-zlib
+      uses: Amulet-Team/checkout-pep440@v1
+      with:
+        repository: 'Amulet-Team/Amulet-zlib'
+        specifier: '==${{ steps.dep.outputs.zlib }}'
+        path: 'build/pylib/Amulet-zlib'
+        rest-token: ${{ inputs.rest-token }}
+
+    - name: Install Amulet-zlib
+      uses: ./build/pylib/Amulet-zlib/.github/actions/install
+      with:
+        twine-username: ${{ inputs.username }}
+        twine-password: ${{ inputs.zlib-password }}
+        compiler-specifier: '==${{ steps.compiler.outputs.version }}'
+        zlib-specifier: ${{ steps.dep2.outputs.zlib }}
 
     - name: Clone Amulet-NBT
-      id: nbt-clone
       uses: Amulet-Team/checkout-pep440@v1
       with:
         repository: 'Amulet-Team/Amulet-NBT'
-        specifier: ${{ steps.dep2.outputs.nbt }}
+        specifier: '==${{ steps.dep.outputs.nbt }}'
         path: 'build/pylib/Amulet-NBT'
         rest-token: ${{ inputs.rest-token }}
-
-    - name: Specialise Specifiers
-      id: compiled-dep
-      shell: bash
-      run: |
-        core=$(python -c "import requirements; print(requirements.get_specifier_set(\"${{ steps.core-clone.outputs.ref }}\"))")
-        echo "core=$core" >> "$GITHUB_OUTPUT"
-        nbt=$(python -c "import requirements; print(requirements.get_specifier_set(\"${{ steps.nbt-clone.outputs.ref }}\"))")
-        echo "nbt=$nbt" >> "$GITHUB_OUTPUT"
 
     - name: Install Amulet-NBT
       uses: ./build/pylib/Amulet-NBT/.github/actions/install
@@ -84,7 +109,17 @@ runs:
         twine-username: ${{ inputs.username }}
         twine-password: ${{ inputs.nbt-password }}
         compiler-specifier: '==${{ steps.compiler.outputs.version }}'
-        nbt-specifier: ${{ steps.compiled-dep.outputs.nbt }}
+        io-specifier: ${{ steps.dep2.outputs.io }}
+        zlib-specifier: ${{ steps.dep2.outputs.zlib }}
+        nbt-specifier: ${{ steps.dep2.outputs.nbt }}
+
+    - name: Clone Amulet-Core
+      uses: Amulet-Team/checkout-pep440@v1
+      with:
+        repository: 'Amulet-Team/Amulet-Core'
+        specifier: '==${{ steps.dep.outputs.core }}'
+        path: 'build/pylib/Amulet-Core'
+        rest-token: ${{ inputs.rest-token }}
 
     - name: Install Amulet-Core
       uses: ./build/pylib/Amulet-Core/.github/actions/install
@@ -92,5 +127,6 @@ runs:
         twine-username: ${{ inputs.username }}
         twine-password: ${{ inputs.core-password }}
         compiler-specifier: '==${{ steps.compiler.outputs.version }}'
+        io-specifier: ${{ steps.dep2.outputs.io }}
         nbt-specifier: ${{ steps.compiled-dep.outputs.nbt }}
         core-specifier: ${{ steps.compiled-dep.outputs.core }}
