--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,7 @@ include-package-data = false
     "**/*.so",
     "**/*.dylib",
     "**/*.lib",
+    "**/*.pkl.gz"
 ]
 
 [tool.setuptools.dynamic]
