--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,5 +4,6 @@ include requirements.py
 recursive-include src/amulet *.cpp *.hpp *Config.cmake
 
 include CMakeLists.txt
+recursive-include submodules/PyMCTranslate *.json
 
 prune tests
