--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -23,6 +23,8 @@ jobs:
     steps:
     - name: Clone
       uses: actions/checkout@v4
+      with:
+        submodules: 'true'
 
     - name: Install dependencies
       uses: ./.github/actions/install-dependencies
