--- a/.github/actions/install/action.yml
+++ b/.github/actions/install/action.yml
@@ -29,6 +29,44 @@ outputs:
 runs:
   using: "composite"
   steps:
+    - name: Validate Inputs
+      shell: bash
+      run: |
+        if [ -z "${{ inputs.twine-username }}" ]; then
+          echo "twine-username is empty"
+          exit 1
+        fi
+
+        if [ -z "${{ inputs.twine-password }}" ]; then
+          echo "twine-password is empty"
+          exit 1
+        fi
+
+        if [ -z "${{ inputs.compiler-specifier }}" ]; then
+          echo "compiler-specifier is empty"
+          exit 1
+        fi
+
+        if [ -z "${{ inputs.io-specifier }}" ]; then
+          echo "io-specifier is empty"
+          exit 1
+        fi
+
+        if [ -z "${{ inputs.nbt-specifier }}" ]; then
+          echo "nbt-specifier is empty"
+          exit 1
+        fi
+
+        if [ -z "${{ inputs.core-specifier }}" ]; then
+          echo "core-specifier is empty"
+          exit 1
+        fi
+        
+        if [ -z "${{ inputs.game-specifier }}" ]; then
+          echo "game-specifier is empty"
+          exit 1
+        fi
+
     - name: Install Prebuilt
       id: install
       shell: bash
