--- a/.github/actions/unittests-src/action.yml
+++ b/.github/actions/unittests-src/action.yml
@@ -3,9 +3,18 @@ description: 'Build from source and run unittests.'
 inputs:
   python-version:
     description: 'The version of Python to install'
+    required: true
 runs:
   using: "composite"
   steps:
+    - name: Validate Inputs
+      shell: bash
+      run: |
+        if [ -z "${{ inputs.python-version }}" ]; then
+          echo "python-version is empty"
+          exit 1
+        fi 
+
     - name: Set up Python ${{ inputs.python-version }}
       uses: actions/setup-python@v5
       with:
